new slide + small knuth

--- a/presentations/check_it_out/check_it_out.tex
+++ b/presentations/check_it_out/check_it_out.tex
@@ -29,33 +29,6 @@
 \usepackage[english]{babel}
 \usepackage{listings}
 \usepackage{graphicx}
-\definecolor{javared}{rgb}{0.6,0,0} % for strings
-\definecolor{javagreen}{rgb}{0.25,0.5,0.35} % comments
-\definecolor{javapurple}{rgb}{0.5,0,0.35} % keywords
-\definecolor{javadocblue}{rgb}{0.25,0.35,0.75} % javadoc
-\definecolor{javalinenumbers}{RGB}{79,80,81} % linenumbers
-\definecolor{grey}{rgb}{0.95,0.95,0.95}
-\lstset{language=Java,
-basicstyle=\ttfamily \footnotesize,
-keywordstyle=\color{myOrange}\textbf,
-stringstyle=\color{javared},
-commentstyle=\color{javagreen},
-morecomment=[s][\color{javadocblue}]{/**}{*/},
-numberstyle=\color{javalinenumbers}\tiny,
-numbersep=10pt,
-tabsize=4,
-showspaces=false,
-showstringspaces=false,
-breaklines=true,
-firstnumber=100,
-backgroundcolor=\color{grey},
-emph={
-  val, var, def,
-},
-emphstyle=\color{myOrange}\bfseries,
-morecomment=[s][\color{blue}]{@}{\ }
-}
-
 \definecolor{links}{HTML}{0000FF}
 \hypersetup{colorlinks,linkcolor=,urlcolor=links}
 
@@ -76,16 +49,26 @@ morecomment=[s][\color{blue}]{@}{\ }
   {\scriptsize {#1}}
 }
 
-% Здравствуйте, меня зовут Аркадий Галяш, я работаю в команде TosChart. 
-% Сегодня я представляю вашему вниманию презентацию на тему "Java со ввкусом огурца", посвященную проблемам и преимуществам использования инструментария BDD в реальных проектах
+% Здравствуйте, меня зовут Аркадий Галяш, и я опять работаю в команде TosChart. =)
+% Сегодня я представляю вашему вниманию презентацию на тему "Testing? Check It Out", посвященную проперти-бейзд тестированию и использованию в разработке на джава инструментов подобных квикчеку.
 % Вопросы можно задавать как походу доклада, так и в конце.
+% Хотелось бы сразу предупредить, что в докладе, как обычно, будет много Джава кода. А вот кода на хаскелле не будет совсем, так что если кто-то пришел послушать про хаскелл, то спешу его разочаровать. =)
 \frame{\titlepage}
 
+
+% Сначала мы рассмотрим на простом примере, каков жизненный цикл обыного приложения с юнит тестами на джиюните, а так же какие есть минусы в таком подходе
+% Потом рассмотрим подход проперти бейзд тестирования и квикчек
+% Рассмотрим все существующие Джава имеплементации квикчека и выберем самую лучшую.
+% А в последней части попытаемся понять как мы могли бы применять квикчек в нашей повседневной работе. 
 \frame%
 {\frametitle{Agenda}
   \tableofcontents[1]
 }
 
+% Итак сначала мы попытаемся проследить жизненный цикл кода и юнит-тестов для него.
+% В качестве простого примера: мы рассмотрим некого условного программиста Джона.
+% На дворе 2000 год, Джон только-только закончил учебу в Университете и устроился в Мун микросистемс
+% Первым заданием ему дали "написать алгоритм бинарного поиска"
 \section{How regular JUnit test looks like (in time)?}
 \subsection{Intro}
 \frame{\frametitle{Intro}
@@ -97,6 +80,9 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{itemize}
 }
 
+% Т.к. Джон только-только выпустился из Университета, поэтому он уверен, что в коде, который он пишет нет багов, поэтому он и не пишет тесты.
+% Давайте посмотрим на код, который он написал для "бинарного поиска".
+% Вообщем, то, что написал Джон похоже на бинарный поиск, хотя и вряд ли прошло бы ревью в нашей компании.
 \subsection{June 2000}
 \frame{\frametitle{June 2000}
   \begin{center}
@@ -105,6 +91,10 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 }
 
+% Но прошло совсем немного времени и Джон, конечно же, рос и развивался как профессионал.
+% Вот в 2001 году Джон уже знает, что нужно писать юнит-тесты, но еще не знает зачем.
+% Поэтому, когда ему сказали написать юнит-тесты на свой "бинарный поиск", Джон честно написал 2 кейса, которые, по его мнению нужно протестировать.
+% Как видно, фантазии у Джона не очень много, и хватило ее только на 2 позитивных теста.
 \subsection{May 2001}
 \frame{\frametitle{May 2001}
   \begin{center}
@@ -113,6 +103,12 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 }
 
+% И вот прошло еще 5 лет, стартап Джона наконец-то вышел в продакшн, появились первые пользователи, а с ними и первые баг репорты.
+% Выяснилось, что реализация Джона не готова к поиску несуществующего элемента.
+% Т.к. Джон в индустрии уже не первый год, он уже в совершенстве владеет всеми необходимыми методиками, например, ТДД.
+% Поэтому первым делом он конечно же написал тест на кейс, который ему сообщили пользователи.
+% Как вы видите, этот тест падает на старой имплементации Джона.
+% Проанализировав требования и свой код, Джон понял, что ему необходимо возвращать -1 в случае несуществующего элемента. 
 \subsection{July 2006}
 \frame{\frametitle{July 2006}
   \begin{center}
@@ -121,6 +117,9 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 }
 
+% Еще через год появился особенно зловредный пользователь, который захотел пользоваться "бинарным поиском" Джона в упорядоченном массиве с дубликатами и ожидал увидеть первый индекс в качестве результата.
+% Джон и его код были совершенно не готовы к этому.
+% Поэтому Джон написал новый тест и улучшил свой код так, чтобы он правильно обрабатывал подобные ситуации
 \subsection{December 2007}
 \frame{\frametitle{December 2007}
   \begin{center}
@@ -129,6 +128,8 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 }
 
+% И вот наступил 2009 год. Джон уже почти 10 лет в индустрии и многое повидал. Поэтому он уже не сильно удивился, когда его бинарный поиск не справился с поиском в очень большом массиве из-за переполнения интеджера.
+% Грустно вздохнув, Джон написал очередной юнит тест для этого кейса и поправил свой код.
 \subsection{October 2009}
 \frame{\frametitle{October 2009}
   \begin{center}
@@ -137,6 +138,7 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 }
 
+% За эти 9 лет, сильно изменился не только Джон, но и его тест. На протяжении всего времени, Джон добавлял новые кейсы.
 \subsection{Summary}
 \begin{frame}[t]
   \frametitle{Long way}
@@ -183,6 +185,9 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 \end{frame}
 
+% Просуммируем впечатление от таких юнит тестов:
+% джиЮнит предполагают что, вы найдете все необходимые кейсы, все пограничные случаи и зафиксируете их в тестах
+% Если мы что-то забудем, не придумаем, то скорее всего мы узнаем об этом кейсе от проблем в продакшене.
 \frame{\frametitle{xUnit}
   \begin{itemize}
     \item Design tests example by example
@@ -192,6 +197,9 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{itemize}
 }
 
+% Есть правда и другой подход: он называется проперти бейзд тестирование.
+% Кратко его суть: мы формулируем ограничения на входные данные, набор действий и постусловие, которое должно выполняться. 
+% А компьютер сам сгенерирует нам входные данные.
 \section{Property based testing}
 \frame{\frametitle{Property based testing}
   \begin{itemize}
@@ -201,6 +209,8 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{itemize}
 }
 
+% Главным представителем этого подхода является квикчек.
+% Оригнальный квикчек - это библиотечка для наскелла, которая как раз помогает с генерацией входных данных
 \subsection{QuickCheck}
 \frame{\frametitle{QuickCheck History}
   \begin{itemize}
@@ -210,12 +220,18 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{itemize}
 }
 
+
+% Т.к. квикчек набрал большую популярность, пойвились его реимпелементации для всех популярных и не очень языков программирования.
+% Как вы можете видеть, здесь и джаваскрипт, и руби, и с++, и ерланг, и даже множество лиспов.
+% Но т.к. мы все же большую часть времени в девекспертс пишем на джава, давайте посмотрим что же у нас есть для джавы.
 \frame{\frametitle{QuickCheck implementations}
   \begin{center}
     \includegraphics[width=0.9\textwidth]{all_checks.png}
   \end{center}
 }
 
+% Вот все 5 доступных для джвм реализаций квикчека. 3 из них написаны для джава, 1 - для скалы и 1 - для клоужи.
+% Что ж давайте выберем что-нибудь.
 \section{Java Quickchecks}
 \frame{\frametitle{QuickCheck implementations}
   \begin{center}
@@ -223,13 +239,24 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{center}
 }
 
-
+% Сразу откинем скалу и кложу. Давайте начистоту, я использовать скалачек, когда использовал скалу. Хорошая взрослая библиотека.
+% Но если вся ваша кодебаза на джава (а у нас именно так), то тащить скалу или кложу в проект, где никто их не знает, только ради тестов 
+% явный оверкилл. Не говоря уже про медленный компилятор.
+% Вот так лихо мы сократили конкурсантов с 5 до 3х.
+% Т.к. мы все тут профессионалы, давайте определим параметры, по которым мы будем их оценивать.
+% 
 \frame{\frametitle{Scala? Clojure?}
   \begin{center}
     \includegraphics[width=0.8\textwidth]{no_thanks.jpeg}
   \end{center}
 }
 
+% Понятно, что мы посмотрим, как на каждой имплементации у нас получится написать тест для бинарного поиска
+% Но т.к. там надо генерировать только массивы примитивов - это явно не самый распространенный юзкейс для бизнес приложений, поэтому сформулируем 
+% добавочные критерии для оценки:
+% генерация пользовательских типов,
+% генерация подмножеств
+% и насколько удобно управлять генерацией данных
 \frame{\frametitle{Implementations criteria}
   \begin{itemize}
     \item Generators of custom types
@@ -238,6 +265,8 @@ morecomment=[s][\color{blue}]{@}{\ }
   \end{itemize}
 }
 
+% Чтобы проверять эти критерии сформулируем второй пример, который мы будем тестировать.
+% Возьмем простое суффиксное дерево и будем хранить в нем цепочки днк.
 \frame{\frametitle{Trie}
   \begin{center}
   \begin{tikzpicture}
@@ -320,8 +349,17 @@ morecomment=[s][\color{blue}]{@}{\ }
 
 \frame{\frametitle{Donald Knuth is shocked by stdev}
   \begin{center}
-    \includegraphics[width=0.8\textwidth]{knuth.jpg} 
+    \includegraphics[width=0.8\textwidth]{knuth.png} 
   \end{center}
+}
+
+\frame{\frametitle{Where can we use it?}
+  \begin{itemize}
+    \item<1-> In Thinkscript, dxStudies - almost everywhere
+    \item<2-> Regression tests - almost everywhere
+    \item<3-> TosChart - configurations testing
+    \item<4-> Often instead of regular xUnit
+  \end{itemize}
 }
 % Ссылки 
 \section{Links}
